属性面板功能开发

--- a/playground/editor/src/assets/iconfont/iconfont.css
+++ b/playground/editor/src/assets/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4308437 */
-  src: url('iconfont.woff2?t=1698740302488') format('woff2'),
-       url('iconfont.woff?t=1698740302488') format('woff'),
-       url('iconfont.ttf?t=1698740302488') format('truetype');
+  src: url('iconfont.woff2?t=1711292979008') format('woff2'),
+       url('iconfont.woff?t=1711292979008') format('woff'),
+       url('iconfont.ttf?t=1711292979008') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,38 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-zitiyangshi_xieti:before {
+  content: "\e652";
+}
+
+.icon-zitiyangshi_xiahuaxian:before {
+  content: "\e653";
+}
+
+.icon-zitiyangshi_jiacu:before {
+  content: "\e654";
+}
+
+.icon-LineDown:before {
+  content: "\e61f";
+}
+
+.icon-LineUp:before {
+  content: "\e620";
+}
+
+.icon-LineLeft:before {
+  content: "\e621";
+}
+
+.icon-LineRight:before {
+  content: "\e622";
+}
+
+.icon-sInLineVertical:before {
+  content: "\e623";
 }
 
 .icon-a-tianjiashangchuantupian:before {
